--- a/crates/surrealdb-component-sdk/Cargo.toml
+++ b/crates/surrealdb-component-sdk/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
+description = "Rust SDK for building SurrealDB WASI components"
+authors = ["Seamlezz"]
+documentation = "https://github.com/Seamlezz/surrealdb-wasi-component"
+keywords = ["surrealdb", "wasi", "component"]
+categories = ["api-bindings"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
