--- a/crates/surrealdb-host-adapter/Cargo.toml
+++ b/crates/surrealdb-host-adapter/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
+description = "Rust host adapter for SurrealDB WASI components"
+authors = ["Seamlezz"]
+documentation = "https://github.com/Seamlezz/surrealdb-wasi-component"
+keywords = ["surrealdb", "wasi", "component"]
+categories = ["api-bindings"]
 
 [dependencies]
 anyhow.workspace = true
