fix(release): use VERSION input for publish task

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
           fi
           echo "VERSION=$VERSION" >> "$GITHUB_ENV"
       - name: Publish package
-        run: task release:publish TAG=$VERSION
+        run: task release:publish VERSION=$VERSION
 
   publish-crates:
     runs-on: ubuntu-latest
