--- a/crates/surrealdb-host-adapter/Cargo.toml
+++ b/crates/surrealdb-host-adapter/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "surrealdb-host-adapter"
-version = "0.1.0"
+version = "0.2.0"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -17,5 +17,6 @@ serde.workspace = true
 serde_cbor.workspace = true
 serde_json.workspace = true
 surrealdb.workspace = true
+surrealdb-types.workspace = true
 tokio.workspace = true
 wasmtime.workspace = true
