--- a/crates/surrealdb-host-adapter/Cargo.toml
+++ b/crates/surrealdb-host-adapter/Cargo.toml
@@ -18,5 +18,5 @@ serde_cbor.workspace = true
 serde_json.workspace = true
 surrealdb.workspace = true
 surrealdb-types.workspace = true
+thiserror = "2"
 tokio.workspace = true
-wasmtime.workspace = true
