--- a/crates/surrealdb-component-sdk/Cargo.toml
+++ b/crates/surrealdb-component-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "surrealdb-component-sdk"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -17,6 +17,7 @@ crate-type = ["cdylib", "rlib"]
 anyhow.workspace = true
 ciborium.workspace = true
 chrono.workspace = true
+futures-util = "0.3"
 prost-types.workspace = true
 serde.workspace = true
 serde_json.workspace = true
