--- a/examples/guest-demo/Cargo.toml
+++ b/examples/guest-demo/Cargo.toml
@@ -4,8 +4,13 @@ version = "0.1.0"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
+autobins = false
+
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
 anyhow.workspace = true
 serde_json.workspace = true
 surrealdb-component-sdk = { path = "../../crates/surrealdb-component-sdk" }
+wit-bindgen.workspace = true
