feat(ci): run example validation before build in CI pipeline
- Add test:examples task that builds guest-demo and runs against host-wasmtime
- Include test:examples in ci task to run before build steps
- Add wasmtime-wasi dependency to host-wasmtime for WASI p2 support
- Update host-wasmtime to use memory-backed SurrealDB and validate guest calls
- Add call statistics tracking (query, subscribe, cancel) for validation
- Update documentation for new test:examples task

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -25,6 +25,11 @@ tasks:
     cmds:
       - cargo test --workspace
 
+  test:examples:
+    cmds:
+      - cargo build -p guest-demo --target wasm32-wasip2
+      - cargo run -p host-wasmtime -- target/wasm32-wasip2/debug/guest_demo.wasm
+
   build:host:
     cmds:
       - cargo build -p surrealdb-host-adapter
@@ -47,6 +52,7 @@ tasks:
       - fmt:check
       - lint
       - test
+      - test:examples
       - build:host
       - build:sdk
       - build:demo
