--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,12 @@ serde = { version = "1", features = ["derive"] }
 serde_cbor = "0.11"
 serde_json = "1"
 surrealdb = { version = "3", default-features = false, features = [
+    "kv-mem",
     "protocol-http",
     "rustls",
 ] }
 surrealdb-types = "3"
-wasmtime = { version = "42", features = ["component-model", "async"] }
+wasmtime = { version = "42", features = ["component-model", "async", "component-model-async"] }
+wasmtime-wasi = "42"
 wit-bindgen = "0.53"
 tokio = { version = "1", features = ["sync"] }
