--- a/examples/host-wasmtime/Cargo.toml
+++ b/examples/host-wasmtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "host-wasmtime"
-version = "0.3.0"
+version = "0.4.0"
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
@@ -12,7 +12,9 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow.workspace = true
+futures-util = "0.3"
 surrealdb.workspace = true
 surrealdb-host-adapter = { path = "../../crates/surrealdb-host-adapter" }
 tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
 wasmtime.workspace = true
+wasmtime-wasi.workspace = true
